added some sections

--- a/index.html
+++ b/index.html
@@ -43,5 +43,80 @@
   </div>
 </div>
 </div>
+<div class="image-nav">
+   <img src="./assets/image 4.png" alt="">
+</div>
+<section class="after-banner">
+    <div>
+        <h2>About <br>Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nam sed ipsum tincidunt, pharetra leo in,
+             auctor diam. Pellentesque mattis 
+             sed erat vel ultrices. Mauris lorem ligula, 
+             bibendum et mauris sed, semper porta libero. 
+             Phasellus dictum purus urna, ut varius lorem 
+             elementum mattis. In blandit, risus quis dictum malesuada, 
+             neque lacus elementum sem, nec malesuada sem lacus eget orci. 
+             Cras lacinia porttitor porta. Praesent tempus vulputate gravida. Proin tristique feugiat dignissim.</p>
+            <button id="cv">Download CV</button>
+            </div>
+    <div><img src="./assets/image 5.png"></div>
+
+</section>
+<section class="what-i-do">
+    <h2>What I <br>Do</h2>
+    <div class="items">
+        <div>
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+        <div id="second">
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+        <div id="third">
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+    </div>
+    <div class="items space">
+        <div>
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+        <div id="second">
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+        <div id="third">
+            <div id="ellipse"></div>
+            <h3>House Painting</h3>
+            <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Nam sed 
+                ipsum tincidunt, pharetra leo in, auctor diam.
+                 Pellentesque mattis sed erat vel ultrices. Mauris lorem</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
